# tengine

./: .clang-format  .gitignore  LICENSE  README.md  meson.build
example/: app.cc  meson.build
example/KeyControlBoxTest/: app.cc  main.cc
example/MouseCousorTest/: main.cc  meson.build
example/MouseCursorTest/: app.cc  meson.build
include/: app.hh  common.hh  logger.hh  window.hh
include/tengine/: app.hh  behaviour.hh  box_collider2d.hh  circle_collider2d.hh  error.hh  keycode.hh  logger.hh  mesh_renderer.hh  object.hh  physics_material2d.hh  rigidbody2d.hh  tengine.hh  tokina.hh  transform2.hh  transform2d.hh  utils.hh  vec2.hh  vec3.hh  window.hh
include/tengine/2d/: box_collider2d.hh
include/tengine/core/: app.hh  asset.hh  error.hh  logger.hh
include/tengine/manager/: assets_manager.hh
src/: app.cc  behaviour.cc  common.cc  logger.cc  mesh_renderer.cc  meson.build  object.cc  rigidbody2d.cc  tokina.cc  transform2.cc  transform2d.cc  vec2.cc  vec3.cc  window.cc
src/2d/: box_collider.cc
src/core/: app.cc  logger.cc
src/manager/: assets_manager.cc
